--- a/app/src/main/res/layout/content_base.xml
+++ b/app/src/main/res/layout/content_base.xml
@@ -5,13 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/textview" />
+    tools:context=".BaseActivity"
+    tools:showIn="@layout/activity_base">
 
 </android.support.constraint.ConstraintLayout>
