--- a/app/src/main/res/layout/content_secondary.xml
+++ b/app/src/main/res/layout/content_secondary.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SecondaryActivity"
-    tools:showIn="@layout/activity_secondary">
+    tools:context=".ProfileActivity"
+    tools:showIn="@layout/activity_profile">
 
     <TextView
         android:id="@+id/textView2"
