--- a/app/src/main/res/layout/content_third.xml
+++ b/app/src/main/res/layout/content_third.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ThirdActivity"
-    tools:showIn="@layout/activity_third">
+    tools:context=".ScheduleActivity"
+    tools:showIn="@layout/activity_schedule">
 
     <TextView
         android:id="@+id/textView3"
