--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -5,5 +5,6 @@ android:shape="rectangle">
     android:centerColor="#009688"
     android:endColor="#00695C"
     android:startColor="#4DB6AC"
-    android:type="linear" />
+    android:type="linear"
+    android:foreground="@drawable/ic_running_people"/>
 </shape>
