--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -9,13 +9,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <!--<TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/textView4"
-            android:gravity="center_horizontal"/>
+            android:gravity="center_horizontal"/>-->
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
